# python_automation

./: .gitignore  Quick Setup.txt  db.sqlite  report.html  requirements.txt  setup.cfg
base/: base_page.py
config/: Models.py  My-Automation-Project-ae9d0149564d.json  evidence_gen.py
data/es/: es_create_workflow_test.csv
data/login/: valid_login.xlsx  valid_login_test.csv  valid_login_xlsx.xlsx
exceptions/: exceptions.py
maps/: es_menu_map.py  es_workflow_map.py  login_map.py  select_map.py
pages/: es_login_page.py  es_menu_page.py  es_workflow_page.py  login_page.py  select_page.py
screenshots/1.43325241/: doc.docx
screenshots/1.844953323/: doc.docx
tests/: conftest.py
tests/ES/: es_create_workflow_test.py  es_export_and_import_worflow.py  es_login_test.py
tests/login/: db.sqlite  invalid_login_test.py  valid_login_test.py
utilities/: FilesManipulator.py  Teste.xlsx  read_data.py
