[tool:pytest]
testpaths = tests/login
addopts =
    --browser chrome
    --webDriverWait 20
    -s
    -v

[metadata]
name = PythonEverisAutomation
description = Projeto de automação web em Python que será utilizado em uma POC
                para comparação com o EFA e futuramente para ensino de automação
author = Marlon, Laerte