[tool:pytest]
addopts =
    --browser chrome
    --webDriverWait 10
    --dataSource GetCsvData
    -s
    -v

[metadata]
name = PythonEverisAutomation
description = Projeto de automação web em Python que será utilizado em uma POC
                para comparação com o EFA e futuramente para ensino de automação
author = Marlon, Laerte